<resources>
    <string name="app_name">Student Records</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_record">Student Record</string>
    <string name="search_tab">Search</string>
    <string name="enroll_tab">Enroll</string>
    <string name="NAME">name</string>
    <string name="enter_roll_no">Enter Roll No.</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_standard">Standard</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">VIEW</string>
    <string name="view_all">View all</string>
    <string name="show">Show</string>
    <string name="roll_number">Roll Number :</string>
    <string name="name">Name :</string>
    <string name="qualification">Qualification :</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="d_o_b">D.O.B</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender :</string>
    <string name="other">Other</string>
    <string name="upload_picture">Upload Picture :</string>
    <string name="refresh">Refresh</string>
    <string name="sort_by">Sort By :</string>

    <!--<string-array name="qualifications">
        <item>Select</item>
        <item>SSC</item>
        <item>Intermediate</item>
        <item>B.Tech</item>
        <item>B.Tech(Hons.)</item>
        <item>M.Tech</item>
        <item>Ph.D</item>
    </string-array>

    <string-array name="sort_items">
        <item>Parameter</item>
        <item>Name</item>
        <item>Age</item>
    </string-array>-->

</resources>