<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:textSize="15sp"
        android:text="@string/roll_number"/>
    <EditText
        android:id="@+id/roll_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_roll_no"
        android:inputType="number"
        tools:ignore="MissingConstraints">
        <requestFocus />
    </EditText>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15sp"
    android:textSize="15sp"
    android:text="@string/name"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_your_name"
        tools:ignore="MissingConstraints" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15sp"
    android:layout_marginTop="15sp"
    android:text="@string/standard"/>

    <EditText
        android:id="@+id/standard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_standard"
        android:inputType="number"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/date_of_birth" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/d_o_b"
            android:layout_width="370sp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:clickable="true"
            android:hint="@string/d_o_b"/>

        <ImageButton
            android:id="@+id/calendar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ccf"
            android:src="@android:drawable/ic_menu_my_calendar" />

    </LinearLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="140dp"
        android:layout_height="60sp"
        android:text="@string/add"
        android:layout_marginTop="50sp"
        android:layout_marginLeft="125sp"
        android:theme="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginStart="125sp" />

</LinearLayout>
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/addbtn"
            android:layout_width="140dp"
            android:layout_height="60sp"
            android:text="@string/add"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/deletebtn"
            android:layout_width="140dp"
            android:layout_height="60sp"
            android:text="@string/delete"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/modifybtn"
            android:layout_width="140dp"
            android:layout_height="60sp"
            android:text="@string/modify"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/viewbtn"
            android:layout_width="140dp"
            android:layout_height="60sp"
            android:text="@string/view"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.74"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/viewallbtn"
            android:layout_width="140dp"
            android:layout_height="60sp"
            android:text="@string/view_all"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/showbtn"
            android:layout_width="140dp"
            android:layout_height="60sp"
            android:text="@string/show"
            android:theme="@style/CardView.Light"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>-->

<!--<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnrollFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NAME" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>-->